package donante;

public enum RazonSocial {
    GUBERNAMENTAL,
    ONG,
    EMPRESA,
    INSTITUCION
}
